--- a/ag-graph.cabal
+++ b/ag-graph.cabal
@@ -22,3 +22,11 @@ library
     safe
 
   default-language: Haskell2010
+
+benchmark bench
+  type:             exitcode-stdio-1.0
+  default-language: Haskell2010
+  hs-source-dirs:   bench
+  main-is:          Bench.hs
+  build-depends:    ag-graph, base, containers, criterion, deepseq
+  ghc-options:      -O2
