--- a/ag-graph.cabal
+++ b/ag-graph.cabal
@@ -26,7 +26,7 @@ library
 benchmark bench
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
-  hs-source-dirs:   bench
+  hs-source-dirs:   bench .
   main-is:          Bench.hs
-  build-depends:    ag-graph, base, containers, criterion, deepseq
+  build-depends:    base, containers, criterion, deepseq, safe, mtl, unordered-containers
   ghc-options:      -O2
