--- a/ag-graph.cabal
+++ b/ag-graph.cabal
@@ -19,7 +19,8 @@ library
     containers,
     unordered-containers,
     mtl,
-    safe
+    safe,
+    vector
 
   default-language: Haskell2010
 
@@ -28,5 +29,5 @@ benchmark bench
   default-language: Haskell2010
   hs-source-dirs:   bench .
   main-is:          Bench.hs
-  build-depends:    base, containers, criterion, deepseq, safe, mtl, unordered-containers
+  build-depends:    base, containers, criterion, deepseq, safe, mtl, unordered-containers, vector
   ghc-options:      -O2
