--- a/ag-graph.cabal
+++ b/ag-graph.cabal
@@ -15,6 +15,8 @@ library
                     Dag
                     Dag.AG
                     Dag.PAG
+                    Dag.Render
+                    Dot
   Other-Modules:    Dag.Internal
                     AG.Internal
                     PAG.Internal
@@ -27,6 +29,7 @@ library
   build-depends:
     base <5,
     containers,
+    language-dot,
     unordered-containers,
     mtl,
     safe,
