--- a/ag-graph.cabal
+++ b/ag-graph.cabal
@@ -18,7 +18,10 @@ library
                     Dag.Rename
                     Dag.Render
                     Dot
+                    DagSimple
+                    DagSimple.AG
   Other-Modules:    Dag.Internal
+                    DagSimple.Internal
                     AG.Internal
                     PAG.Internal
                     Mapping
@@ -46,7 +49,8 @@ library
 benchmark bench
   type:             exitcode-stdio-1.0
   default-language: Haskell2010
-  hs-source-dirs:   bench .
+  hs-source-dirs:   bench src examples
   main-is:          Bench.hs
-  build-depends:    base, containers, criterion, deepseq, safe, mtl, unordered-containers, vector
+  build-depends:    base, containers, criterion, deepseq, safe, mtl, unordered-containers, vector,
+                    language-dot, process, filepath, directory
   ghc-options:      -O2
